# hft-market-marking-2026

./: .clang-tidy  .dockerignore  .gitignore  BACKTESTER_README.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  STRATEGY.md  build-hft-market-making-2026.bat  hft opening closing rules annotaion 4.5.26 2 31.docx  pyproject.toml
bench/: BenchMain.cpp  BenchOnLob.cpp  BenchOrderBook.cpp  CMakeLists.txt
cmake/: GlobalSettings.cmake  (+1 more)
rust/: .gitignore  Cargo.toml
rust/benches/: parse.rs  replay.rs
rust/config/: example.toml
rust/src/: calibration.rs  config.rs  engine.rs  fill_engine.rs  lib.rs  market_book.rs  metrics.rs  own_orders.rs  report.rs  types.rs
rust/src/parser/: lob.rs  mod.rs  trades.rs
rust/src/strategy/: avellaneda_stoikov.rs  mod.rs  symmetric.rs
rust/tests/: as_props.rs  end_to_end.rs  fill_engine_props.rs  parser_merge_props.rs  replay_smoke.rs  sweep_cli.rs
src/: CMakeLists.txt  Config.hpp  csv_data_loader.cpp  lob.py  lob_reader.py  logging.hpp  main.cpp  strategy_avellaneda.cpp  strategy_microprice.cpp  types.cpp  types.hpp
src/analytics/: CMakeLists.txt  pnl_tracker.cpp  pnl_tracker.hpp
src/backtest/: CMakeLists.txt  backtest_config.cpp  backtest_config.hpp  backtest_data_reader.cpp  backtest_data_reader.hpp  backtest_engine.cpp  backtest_engine.hpp  execution_simulator.cpp  execution_simulator.hpp
src/backtest/analytics/: CMakeLists.txt  analytics.cpp  analytics.hpp
src/backtest/engine/: CMakeLists.txt  args.cpp  args.hpp  engine.hpp
src/backtest/export/: CMakeLists.txt  export.cpp  export.hpp
src/backtest/order_book/: CMakeLists.txt  order_book.cpp  order_book.hpp
src/backtest/orders/: limit_order.hpp  market_order.hpp  order.hpp
src/backtest/parser/: CMakeLists.txt  parser.cpp  parser.hpp
src/backtest/strategies/: AvellanedaStoikovStrategy.hpp  CMakeLists.txt  MicropriceAvellanedaStoikovStrategy.hpp  PassiveStrategy.hpp  ReplayStrategy.hpp  TrendFollowingStrategy.hpp  factory.cpp  factory.hpp
src/backtest/strategy/: analytics.hpp  strategy.hpp
src/book/: CMakeLists.txt  order_book.cpp  order_book.hpp
src/bt_engine/: BacktestEngine.hpp
src/bt_engine/data_reader/: DataReader.hpp  LimitOrderBookReader.hpp  MarketTradeReader.hpp
src/common/: BasicTypes.cpp  BasicTypes.hpp  CsvReader.cpp  CsvReader.hpp  DataFeed.cpp  DataFeed.hpp  Dispatcher.hpp  EventParser.cpp  EventParser.hpp  EventTypes.hpp  Exchange.cpp  Exchange.hpp  FlatMerger.hpp  HierarchyMerger.hpp  KalmanFilter.hpp  LimitOrderBook.cpp  LimitOrderBook.hpp  MarketDataEvent.hpp  Order.hpp  PnLTracker.cpp  PnLTracker.hpp  ShardedDispatcher.hpp  Strategy.hpp  ThreadSafeQueue.hpp  Types.hpp  hft_types.hpp
src/core/: CMakeLists.txt  event.hpp
src/data/: CMakeLists.txt  csv_lob_loader.cpp  csv_reader.cpp  csv_reader.hpp  csv_trade_loader.cpp  csv_util.hpp  event_stream.cpp  event_stream.hpp
src/data_ingestion/: data_types.hpp
src/data_ingestion/loaders/: SimpleLoader.hpp
src/data_ingestion/parsers/: Parser.hpp
src/data_ingestion/parsers/csv/: LOBCSVParser.hpp  TradeCSVParser.hpp
src/data_loader/: csv_lob_queue.cpp  csv_lob_queue.hpp  csv_parsers.cpp  csv_parsers.hpp  csv_trades_queue.cpp  csv_trades_queue.hpp  event_queue.hpp  event_source.hpp  run_config.cpp  run_config.hpp  streaming_event_source.hpp
src/engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  LatencyModel.hpp  Logger.hpp  Metrics.cpp  Metrics.hpp  OrderBook.hpp  Types.hpp  backtest_engine.cpp  backtest_engine.hpp  backtester.cpp  backtester.hpp
src/exec/: CMakeLists.txt  fill.hpp  latency.cpp  latency.hpp  matcher.cpp  matcher.hpp  matching_engine.cpp  matching_engine.hpp  queue_model.cpp
src/execution/: backtest_engine.cpp  backtest_engine.hpp  matching_engine.cpp  matching_engine.hpp
src/io/: CMakeLists.txt  CsvReader.cpp  CsvReader.hpp
src/main/: AvellanedaStoikov.cpp  AvellanedaStoikov.hpp  BacktestEngine.hpp  Backtester.cpp  Backtester.hpp  CMakeLists.txt  Dummy.cpp  SimulationEngine.cpp  SimulationEngine.hpp  Strategy.hpp  avellaneda_stoikov_strategy.cpp  avellaneda_stoikov_strategy.hpp  config.cpp  config.hpp  csv_reader.cpp  csv_reader.hpp  exchange.cpp  exchange.hpp  main.cpp  replay_engine.cpp  replay_engine.hpp  report.cpp  report.hpp  simple_cycle_strategy.cpp  simple_cycle_strategy.hpp  stats.cpp  stats.hpp  strategy.hpp  types.hpp
src/metrics/: metric.hpp  metrics_calculator.cpp  metrics_calculator.hpp  predefined_metrics.cpp  predefined_metrics.hpp
src/portfolio/: portfolio.cpp  portfolio.hpp
src/stats/: stats.cpp
src/strategies/: avellaneda_stoikov_quoter.cpp  avellaneda_stoikov_strategy.hpp  micro_price_quoter.cpp  microprice_strategy.hpp  static_quoter.cpp
src/strategy/: AvellanedaStoikov.hpp  CMakeLists.txt  Config.hpp  DataReader.hpp  FullMicropriceAS.hpp  IStrategy.hpp  Intensity.cpp  Intensity.hpp  Metrics.hpp  Microprice.hpp  MicropriceAS.hpp  OrderManager.hpp  Volatility.hpp  avellaneda_stoikov_strategy.cpp  avellaneda_stoikov_strategy.hpp  main_strategy.cpp  simple_crossing_strategy.cpp  simple_crossing_strategy.hpp  strategy_base.hpp  strategy_context.cpp  strategy_context.hpp  strategy_interface.hpp  volatility.cpp  volatility.hpp
src/strategy/strategies/: avellaneda_stoikov.cpp  avellaneda_stoikov.hpp  market_maker.cpp  market_maker.hpp
src/trade_engine/strategy/: StoikovMM.hpp  StrategyBase.hpp
test/: AnalyticsTest.cpp  AsQuotesTest.cpp  BacktestEngineTest.cpp  BasicTypesTest.cpp  CMakeLists.txt  CsvReaderTest.cpp  EngineFillsTest.cpp  EngineMetricsTest.cpp  ExchangeTest.cpp  ExecutionSimulatorTest.cpp  MetricsTest.cpp  MicropriceTest.cpp  OrderBookTest.cpp  PnLTrackerTest.cpp  StrategyIntegrationTest.cpp  StrategyTest.cpp  VolatilityTest.cpp  test_helpers.hpp  test_main.cpp
tests/: CMakeLists.txt  lob_fixture.hpp  lob_tests.py  test_csv_lob_loader.cpp  test_csv_trade_loader.cpp  test_engine.cpp  test_event_stream.cpp  test_execution.cpp  test_latency.cpp  test_matcher.cpp  test_ofi.cpp  test_order_book.cpp  test_portfolio.cpp  test_queue_model.cpp  test_replay.cpp  test_static_quoter.cpp  test_stats.cpp  test_types.cpp
(+76 files in other folders)
