[project]
name = "hft-market-making-cmf"
version = "0.0.0"
description = "Default template for PDM package"
authors = [
    {name = "CMF Team", email = "cmfteam2018@gmail.com"},
]
dependencies = [
    "pandas>=2.2.0",
    "sortedcontainers>=2.4.0",
]

requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
]
notebooks = [
    "ipykernel>=6.0.0",
    "nbconvert>=7.17.1",
]
visual = [
    "matplotlib>=3.0.0",
    "plotly>=5.0.0",
    "nbformat>=4.2.0"
]
