[package]
name = "hft-mm-backtester"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "L2-replay HFT market-making backtester implementing Avellaneda–Stoikov (2008)"

[dependencies]
chrono       = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
csv          = "1.3"
clap         = { version = "4", features = ["derive"] }
rayon        = "1.10"
thiserror    = "1"
log          = "0.4"
env_logger   = "0.11"

[dev-dependencies]
proptest  = "1"
tempfile  = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[[bin]]
name = "calibrate"
path = "src/bin/calibrate.rs"

[[bin]]
name = "sweep"
path = "src/bin/sweep.rs"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "replay"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
