include(CTest)

if (EXISTS ${CMAKE_SOURCE_DIR}/3rdparty/Catch2/extras/Catch.cmake)
    include(${CMAKE_SOURCE_DIR}/3rdparty/Catch2/extras/Catch.cmake)
else()
    function(catch_discover_tests TARGET)
    endfunction()
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/test)

file(GLOB TEST_SRC CONFIGURE_DEPENDS *.cpp)

set(TARGET hft-market-making-tests)
add_executable(${TARGET} ${TEST_SRC})

target_link_libraries(${TARGET} PRIVATE
    Catch2-static-lib
    hft-market-making-strategy
)

catch_discover_tests(${TARGET})
